[project]
name = "ComfyUI-Simple_Image_To_Prompt"
description = "ComfyUI simple Image To Prompt node."
version = "0.0.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/zentrocdot/ComfyUI-Simple_Image_To_Prompt"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zentrocdot"
DisplayName = "ComfyUI-Simple_Image_To_Prompt"
Icon = "https:///github.com/zentrocdot/ComfyUI-Simple_Image_To_Prompt/blob/main/images/original_logo_512x512.png"
