[project]
name = "ComfyUI-Simple_Image_To_Prompt"
description = "ComfyUI simple Image To Prompt node."
version = "0.0.0.8"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/zentrocdot/ComfyUI-Simple_Image_To_Prompt"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zentrocdot"
DisplayName = "ComfyUI-Simple_Image_To_Prompt"
Icon = "https://github.com/zentrocdot/ComfyUI-Turtle_Graphics_Demo/blob/main/images/logo.jpg"
